# 2022-ya

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  imports.py  requirements.dev.txt  requirements.txt  setup.cfg
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_imports.py
backend/tests/migrations/: test_migrations.py
backend/tests/schemas/: test_imports.py
backend/tests/utils/: generate.py
backend/yashop/: alembic.ini
backend/yashop/api/: __main__.py  app.py  exception_handlers.py  open_api.py  schema.py
backend/yashop/api/handlers/: __init__.py  hello.py  imports.py
backend/yashop/db/: __main__.py  schema.py
backend/yashop/db/alembic/: env.py
backend/yashop/db/alembic/versions/: 220d4f0fa8eb_initial.py
backend/yashop/utils/: argparse.py  pg.py
