[metadata]
name = yashop
version = 1.0.0
description = Test task for Yandex backend-development school
classifiers =
    Framework :: aiohttp
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
install_requires =
    alembic==1.8.0
    ConfigArgParse==1.5.3
    greenlet==1.1.2
    Mako==1.2.0
    MarkupSafe==2.1.1
    psycopg2-binary==2.9.3
    six==1.16.0
    SQLAlchemy==1.4.37
    SQLAlchemy-Utils==0.38.2


python_requires = >=3.8

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    yashop-db = yashop.db.__main__:main
